tests/test_data/custom-ingress-annotations/expected/networking.k8s.io/v1beta1/Ingress/bucketrepo.yaml
# Source: jxboot-helmfile-resources/templates/700-bucketrepo-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    beer: moretti-from-values
    cheese: edam-from-requirements
    kubernetes.io/ingress.class: nginx-public
  name: bucketrepo
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: bucketrepo
          servicePort: 80
        path: "/"
    host: myrepo.com
  tls:
  - hosts:
    - myrepo.com
    secretName: "tls-mydomain-com-s"
