tests/test_data/custom-ingress-annotations/expected/networking.k8s.io/v1beta1/Ingress/hook.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    beer: moretti-from-values
    cheese: edam-from-requirements
    kubernetes.io/ingress.class: nginx-public
  name: hook
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
        path: "/hook"
    host: myhost.acme.com
  tls:
  - hosts:
    - myhost.acme.com
    secretName: "tls-mydomain-com-s"
